<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rowRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mapMargins"
        android:layout_marginEnd="@dimen/mapMargins"
        android:adjustViewBounds="true"
        android:contentDescription="@string/mapDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mapdefaultcrop_nowater" />

    <ImageView
        android:id="@+id/reference_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mapMargins"
        android:layout_marginEnd="@dimen/mapMargins"
        android:adjustViewBounds="true"
        android:backgroundTint="@null"
        android:contentDescription="@string/refMapDesc"
        android:tint="#00C0B9B9"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reference" />

    <androidx.cardview.widget.CardView
        android:id="@+id/nation_fire_card"
        android:layout_width="@dimen/nationCardWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fireNationMarginStart"
        android:layout_marginTop="@dimen/fireNationMarginTop"
        android:background="#FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:backgroundTintMode="src_over"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardElevation="@dimen/noAdjust"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF">

            <TextView
                android:id="@+id/nation_fire_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:text="@string/map_title_fire"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nation_fire_power_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/powerLabelMarginStart"
                android:layout_marginTop="@dimen/powerLabelMarginTop"
                android:layout_marginBottom="@dimen/powerLabelMarginBottom"
                android:background="#00FFFFFF"
                android:text="@string/power_required"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nation_fire_power_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/powerValueMarginStart"
                android:layout_marginTop="@dimen/powerValueMarginTop"
                android:background="#00FFFFFF"
                android:text="@string/placeholder_int"
                android:textColor="#EEFFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nation_fire_power_label"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nation_water_card"
        android:layout_width="@dimen/nationCardWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/waterNationMarginStart"
        android:layout_marginTop="@dimen/waterNationMarginTop"
        android:background="#FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:backgroundTintMode="src_over"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardElevation="@dimen/noAdjust"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF">

            <TextView
                android:id="@+id/nation_water_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:text="@string/map_title_water"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nation_water_power_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/powerLabelMarginStart"
                android:layout_marginTop="@dimen/powerLabelMarginTop"
                android:layout_marginBottom="@dimen/powerLabelMarginBottom"
                android:background="#00FFFFFF"
                android:text="@string/power_required"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nation_water_power_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/powerValueMarginStart"
                android:layout_marginTop="@dimen/powerValueMarginTop"
                android:background="#00FFFFFF"
                android:text="@string/placeholder_int"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toEndOf="@+id/nation_water_power_label"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nation_earth_card"
        android:layout_width="@dimen/nationCardWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/earthNationMarginStart"
        android:layout_marginTop="@dimen/earthNationMarginTop"
        android:background="#FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:backgroundTintMode="src_over"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardElevation="@dimen/noAdjust"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF">

            <TextView
                android:id="@+id/nation_earth_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:text="@string/map_title_earth"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nation_earth_power_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/powerLabelMarginStart"
                android:layout_marginTop="@dimen/powerLabelMarginTop"
                android:layout_marginBottom="@dimen/powerLabelMarginBottom"
                android:background="#00FFFFFF"
                android:text="@string/power_required"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nation_earth_power_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/powerValueMarginStart"
                android:layout_marginTop="@dimen/powerValueMarginTop"
                android:background="#00FFFFFF"
                android:text="@string/placeholder_int"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toEndOf="@+id/nation_earth_power_label"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>